# pupper_can_adapter

./: LICENSE  README.md  pyproject.toml
configs/: robot.example.yaml
scripts/: can_scan.py  run_can_walk.py
src/pupper_can_adapter/: __init__.py  aal.py  mapper.py  safety.py  telemetry.py
src/pupper_can_adapter/bridge/: pupper_bridge.py
src/pupper_can_adapter/can/: driver.py
src/pupper_can_adapter/protocols/: base.py  rmd.py  sim.py
tests/: test_mapping.py
